minor updates to UI